Handling backward compatibility for UMA token introspection.